--- a/public/assets/pokemon.css
+++ b/public/assets/pokemon.css
@@ -1,10 +1,10 @@
-{
+*{
    margin: 0px;
    padding: 0px;
 }
 
 .pokemon-card-container{
-    background-color:red
+    background:linear-gradient(to right,red,black,white) ;
     width:350px;
     height:450px;
     margin: 10%;
@@ -25,8 +25,5 @@
     text-align: center;
     font-size:19px;
     font-weight: lighter;
-    padding: 10px;
-
-
-
+    padding:10px;
 }
