fixed main.handlebars to body

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,6 @@
     <title>Pokédex</title>
 </head>
 <body>
-		{{{ pokeList }}}
-        {{{ displayPoke }}}
-		{{{ deckList }}}
-
+		{{{ body }}}
 </body>
 </html>
