Wired event handler to pull down image from search.

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light">
-        <form class="form-inline" >
+        <form class="form-inline" id="search-form">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="search" name="search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" name="button" id="button">Search</button>
         
@@ -31,20 +31,25 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-    <script>
-        $("#button").on("submit", () => {
-            event.preventDefault()
-        const search = event.target.value;
-        $.ajax({
-          url: "/api/search",
-          method: "POST",
-          data: search
-        }).then((responce) => {
-            console.log(responce)
-         $("#pokeimage").attr({"src": responce.sprite})
-        })
-      })
-    </script>
+<script>
+  $("#search-form").submit((event) => {
+    event.preventDefault()
+
+    console.log("hello")
+    
+    const search = $("#search-form").serialize()
+    console.log(search)
+    $.ajax({
+      url: "/api/search",
+      method: "POST",
+      data: search,
+      dataType: 'json'
+    }).then((data, error) => {
+      const sprite = data[0].pokemon_sprite
+      $("#pokeimage").attr({"src": sprite })
+    })
+  })
+</script>
 
 
     
