--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,31 +1,25 @@
 <nav class="navbar navbar-light bg-light">
-        <form class="form-inline" id="search-form">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="search" name="search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" name="button" id="button">Search</button>
-        
-        </form>
-    </nav>
-    <div class="pokemon-card-container">
-        
-        <div class="pokemon-card">
-            <div class = "background">
-                <img src="" class="image" id="pokeimage">
-                
-            </div>
-            
-            <div>
-                
-            </div class= "entry">
-            <h1 class ="pokemon-name">"pokemons name"</h1>
-            <span class="pokemon-type">"pokemons type"</span>
-            
-            <div class = "context">
-                <p>"pokedex entry123"</p>
-            </div>
-            
-            
-        </div>
-        
+  <form class="form-inline" id="search-form">
+    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="search" name="search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+</nav>
+
+<div class="pokemon-card-container">
+  <div class="pokemon-card">
+    <div class="sprite-container">
+      <img class="image" id="pokemon-sprite">
     </div>
-    
-    
+
+    <div class="entry">
+    <h1 class ="pokemon-name">"pokemons name"</h1>
+    <span class="pokemon-number">"pokemons type"</span>
+ 
+    <div class = "context">
+      <p>"pokedex entry123"</p>
+    </div>
+
+    </div>
+
+  </div>
+</div>
