--- a/public/assets/pokemon.css
+++ b/public/assets/pokemon.css
@@ -1,28 +1,37 @@
-*{
+* {
    margin: 0px;
    padding: 0px;
 }
 
 .pokemon-card-container{
-    background:linear-gradient(to right,red,black,white) ;
+    background:linear-gradient(to bottom,red,black,white) ;
     width:350px;
-    height:450px;
-    margin: 10%;
+    min-height:450px;
+    border: 5px solid black;
+    border-radius: .5em;
+    justify-content: center;
 }
 
-.background {
+.pokemon-card { justify-content: center;}
+.entry { width: 75%}
+
+.background, div.sprite-container, div.entry {
   text-align: center;
-  background:linear-gradient(to right,red,black,white);
+  background-color: whitesmoke;
+  border: 5px solid black;
+  border-radius: .5em;
+  margin: 30px auto 10px auto;
 }
 
-.image {
+.image, div.sprite-container {
   width:200px;
   height:200px;
+  justify-content: center;
 }
 
 .pokemon-name{
-    text-align: center;
-    font-size:19px;
-    font-weight: lighter;
-    padding:10px;
+  text-align: center;
+  font-size:19px;
+  font-weight: lighter;
+  padding:10px;
 }
